# brotli

./: .gitignore  CMakeLists.txt  build.py
c/enc/: encode.c  params.h
c/include/brotli/: encode.h
c/tools/: brotli.c
python/: _brotli.c  bro.py
tests/: roundtrip_test.sh
tools/: bro.cc
